# sdrfstudio

./: .env.example  .env.prod.example  .gitignore  AGENT.md  README.md  docker-compose.prod.yml  docker-compose.yml  package.json
apps/api/: Dockerfile  pyproject.toml
apps/api/app/: __init__.py  main.py  models.py  schemas.py  worker.py
apps/api/app/core/: config.py  database.py
apps/api/app/services/: ai_client.py  analysis.py  extractors.py  sdrf.py  storage.py
apps/api/migrations/: 0001_initial.sql
apps/api/tests/: test_api.py  test_pride_normalization.py  test_sample_evidence.py  test_sdrf.py
apps/web/: Dockerfile  Dockerfile.prod  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.js
apps/web/scripts/: generate-cell-line-annotations.mjs
apps/web/src/: App.test.tsx  App.tsx  api.ts  cellLineAnnotations.generated.ts  cellLineMatcher.test.ts  cellLineMatcher.ts  main.tsx  ontologySearch.ts  sampleBatch.test.ts  sampleBatch.ts  store.ts  styles.css  styles.test.ts  types.ts  upstreamSdrfTemplates.generated.ts  workflow.ts
docs/: PROJECT_RUNBOOK.zh-CN.md
docs/superpowers/plans/: 2026-05-19-sample-batch-assignment.md  2026-06-10-cell-line-annotation.md  2026-06-12-samples-ai-raw-file-id-mapping.md  2026-06-17-files-ai-assistant.md  2026-06-17-files-technical-configuration.md  2026-06-17-review-validation-export.md  2026-06-17-unify-ai-assistant-layout.md
docs/superpowers/specs/: 2026-05-19-sample-batch-assignment-design.md  2026-06-10-cell-line-annotation-design.md  2026-06-17-files-ai-assistant-design.md  (+3 more)
(+10 files in other folders)
