[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sdrf-studio-api"
version = "0.1.0"
description = "FastAPI backend for SDRF Studio"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115",
  "uvicorn[standard]>=0.30",
  "sqlalchemy>=2.0",
  "psycopg[binary]>=3.2",
  "pydantic-settings>=2.4",
  "python-multipart>=0.0.9",
  "requests>=2.32",
  "openpyxl>=3.1",
  "xlrd>=2.0",
  "pypdf>=5.0",
  "redis>=5.0",
  "rq>=1.16",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3",
  "httpx>=0.27",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
